--- a/roles/wordpress/tasks/main.yml
+++ b/roles/wordpress/tasks/main.yml
@@ -1,44 +1,44 @@
 ---
 # tasks file for wordpress
-    - name: Install necessary packages
-      package: 
-        name: "{{item}}"
-        state: present2
-      with_items:
-        - wget
-        - unzip
-        - php-gd
-        - httpd
-        - mysql
-        - mariadb-server
-        - php 
-        - php-mysql
-        - php-fpm
-      ignore_errors: true
+- name: Install necessary packages
+  package: 
+    name: "{{item}}"
+    state: present
+  with_items:
+    - wget
+    - unzip
+    - php-gd
+    - httpd
+    - mysql
+    - mariadb-server
+    - php
+    - php-mysql
+    - php-fpm
+  ignore_errors: true
 
-    - name: Download wordpress package
-      get_url:
-        url: "https://wordpress.org/latest.tar.gz"
-        dest: /tmp/
+- name: Download wordpress package
+  get_url:
+    url: "https://wordpress.org/latest.tar.gz"
+    dest: /tmp/
 
-    - name: Unzip wordpress file
-      unarchive:
-        src: "/tmp/wordpress-5.2.1.tar.gz"
-        dest: /var/www/html/
-        remote_src: yes
-      become: yes
-      become_method: sudo
+- name: Unzip wordpress file
+  unarchive:
+    src: "/tmp/wordpress-5.2.1.tar.gz"
+    dest: /var/www/html/
+    remote_src: yes
+    become: yes
+    become_method: sudo
 
-    - name: Move files to html folder
-      shell: "mv /var/www/html/wordpress/*  /var/www/html/"
-      become: yes
-      become_method: sudo
-      ignore_errors: yes
+- name: Move files to html folder
+  shell: "mv /var/www/html/wordpress/*  /var/www/html/"
+  become: yes
+  become_method: sudo
+  ignore_errors: yes
       
-    - name: Restart httpd 
-      systemd:
-        name: httpd
-        state: stoped
-        enabled: yes
-      become: yes
-      become_method: sudo
+- name: Restart httpd 
+  systemd:
+    name: httpd
+    state: stopped
+    enabled: yes
+  become: yes
+  become_method: sudo
