--- a/roles/r1soft/handlers/main.yml
+++ b/roles/r1soft/handlers/main.yml
@@ -1,2 +1,8 @@
 ---
 # handlers file for r1soft
+- name: R1SOFT_INSTALLED_ON_CENTOS_7
+  systemd:
+    name: sbm-agent
+    state: restarted
+    
+'
